add framework.jar to project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,16 @@ android {
             path 'src/main/cpp/CMakeLists.txt'
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
 }
 
 dependencies {
+    provided files('libs/framework.jar')
 }
