--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,10 @@ allprojects {
     repositories {
         jcenter()
     }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << '-Xbootclasspath/p:app/libs/framework.jar'
+        }
+    }
 }
